<resources>
    <string name="full_stop">。</string>
    <string name="cht_full_stop">。</string>
    <string name="en_full_stop">.</string>
    <string name="comma">，</string>
    <string name="cht_comma">，</string>
    <string name="en_comma">,</string>
    <string name="semicolon">；</string>
    <string name="cht_semicolon">；</string>
    <string name="en_semicolon">;</string>
    <string name="exclamatory_point">！</string>
    <string name="cht_exclamatory_point">！</string>
    <string name="en_exclamatory_point">!</string>
    <string name="question_mark">？</string>
    <string name="cht_question_mark">？</string>
    <string name="en_question_mark">\?</string>
    <string name="colon">：</string>
    <string name="cht_colon">：</string>
    <string name="en_colon">:</string>
    <string name="ellipsis">……</string>
    <string name="cht_ellipsis">……</string>
    <string name="en_ellipsis">&#8230;</string>
    <string name="hello_world">世界你好！</string>
    <string name="cht_hello_world">@string/hello_world</string>
    <string name="en_hello_world">Hello world!</string>
    <string name="empty_string"></string>
    <string name="space"> </string>
    <string name="settings">设置</string>
    <string name="cht_settings">設置</string>
    <string name="en_settings">Settings</string>
    <string name="help">帮助</string>
    <string name="cht_help">幫助</string>
    <string name="en_help">Help</string>
    <string name="terms_of_note">注意事项</string>
    <string name="cht_terms_of_note">注意事項</string>
    <string name="en_terms_of_note">Terms of Note</string>
    <string name="about">关于</string>
    <string name="cht_about">關於</string>
    <string name="en_about">About</string>
    <string name="about_this_app">关于本软件</string>
    <string name="cht_about_this_app">關於本軟體</string>
    <string name="en_about_this_app">About This APP</string>
    <string name="copyright">版权</string>
    <string name="cht_copyright">版權</string>
    <string name="en_copyright">Copyright</string>
    <string name="version_log">版本日志</string>
    <string name="cht_version_log">版本日志</string>
    <string name="en_version_log">Version Log</string>
    <string name="exit">退出</string>
    <string name="cht_exit">退出</string>
    <string name="en_exit">Exit</string>
    <string name="name">名称</string>
    <string name="cht_name">名稱</string>
    <string name="en_name">Name</string>
    <string name="alias">别名</string>
    <string name="cht_alias">別名</string>
    <string name="en_alias">Alias</string>
    <string name="app_name_key">软件名称</string>
    <string name="cht_app_name_key">軟體名稱</string>
    <string name="en_app_name_key">APP Name</string>
    <string name="author">作者</string>
    <string name="cht_author">作者</string>
    <string name="en_author">Author</string>
    <string name="app_version">软件版本</string>
    <string name="cht_app_version">軟體版本</string>
    <string name="en_app_version">APP Version</string>
    <string name="usage">用途</string>
    <string name="cht_usage">用途</string>
    <string name="en_usage">Usage</string>
    <string name="remarks">备注</string>
    <string name="cht_remarks">備注</string>
    <string name="en_remarks">Remarks</string>
    <string name="save">保存</string>
    <string name="cht_save">保存</string>
    <string name="en_save">Save</string>
    <string name="save_successfully">保存成功</string>
    <string name="cht_save_successfully">保存成功</string>
    <string name="en_save_successfully">Saved Successfully</string>
    <string name="save_failed">保存失败</string>
    <string name="cht_save_failed">保存失敗</string>
    <string name="en_save_failed">Saved Unsuccessfully</string>
    <string name="refresh">刷新</string>
    <string name="cht_refresh">刷新</string>
    <string name="en_refresh">Refresh</string>
    <string name="yes">是</string>
    <string name="cht_yes">是</string>
    <string name="en_yes">Yes</string>
    <string name="no">否</string>
    <string name="cht_no">否</string>
    <string name="en_no">No</string>
    <string name="confirm">确定</string>
    <string name="cht_confirm">確定</string>
    <string name="en_confirm">Confirm</string>
    <string name="ok">好</string>
    <string name="cht_ok">好</string>
    <string name="en_ok">OK</string>
    <string name="cancal">取消</string>
    <string name="cht_cancal">取消</string>
    <string name="en_cancal">Cancel</string>
    <string name="successful">成功</string>
    <string name="cht_successful">成功</string>
    <string name="en_successful">Successful</string>
    <string name="failed">失败</string>
    <string name="cht_failed">失敗</string>
    <string name="en_failed">Failed</string>
    <string name="agree">同意</string>
    <string name="cht_agree">同意</string>
    <string name="en_agree">Agree</string>
    <string name="not_agree">不同意</string>
    <string name="cht_not_agree">不同意</string>
    <string name="en_not_agree">Do Not Agree</string>
    <string name="confirm_selecttions">确认选择</string>
    <string name="cht_confirm_selecttions">確認選擇</string>
    <string name="en_confirm_selecttions">Confirm Selecttion(s)</string>
    <string name="cancel_selections">取消选择</string>
    <string name="cht_cancel_selections">取消選擇</string>
    <string name="en_cancel_selections">Cancel Selection(s)</string>
    <string name="redo">重做</string>
    <string name="cht_redo">重做</string>
    <string name="en_redo">Redo</string>
    <string name="undo">撤销</string>
    <string name="cht_undo">撤銷</string>
    <string name="en_undo">Undo</string>
    <string name="query">查询</string>
    <string name="cht_query">查詢</string>
    <string name="en_query">Query</string>
    <string name="query_result">查询结果</string>
    <string name="cht_query_result">查詢結果</string>
    <string name="en_query_result">Query Result</string>
    <string name="search">查找</string>
    <string name="cht_search">查找</string>
    <string name="en_search">Search</string>
    <string name="search_result">查找结果</string>
    <string name="cht_search_result">查找結果</string>
    <string name="en_search_result">Query Result</string>
    <string name="not_found">找不到</string>
    <string name="cht_not_found">找不到</string>
    <string name="en_not_found">Not Found</string>
    <string name="can_not_find">找不到</string>
    <string name="cht_can_not_find">找不到</string>
    <string name="en_can_not_find">Can Not Find</string>
    <string name="none">无</string>
    <string name="cht_none">無</string>
    <string name="en_none">None</string>
    <string name="unknown">未知</string>
    <string name="cht_unknown">未知</string>
    <string name="en_unknown">Unknown</string>
    <string name="undefined">未定义</string>
    <string name="cht_undefined">未定義</string>
    <string name="en_undefined">Undefined</string>
    <string name="customized">自定义</string>
    <string name="cht_customized">自定義</string>
    <string name="en_customized">Customized</string>
    <string name="quantity">数目</string>
    <string name="cht_quantity">數目</string>
    <string name="en_quantity">Quantity</string>
    <string name="add">添加</string>
    <string name="cht_add">添加</string>
    <string name="en_add">Add</string>
    <string name="delete">删除</string>
    <string name="cht_delete">刪除</string>
    <string name="en_delete">Delete</string>
    <string name="select">选择</string>
    <string name="cht_select">選擇</string>
    <string name="en_select">Select</string>
    <string name="please_select">请选择</string>
    <string name="cht_please_select">請選擇</string>
    <string name="en_please_select">Please Select</string>
    <string name="please_select_or_customize">请选择或自定义</string>
    <string name="cht_please_select_or_customize">請選擇或自定義</string>
    <string name="en_please_select_or_customize">Please Select or Customize</string>
    <string name="edit">编辑</string>
    <string name="cht_edit">編輯</string>
    <string name="en_edit">Edit</string>
    <string name="chs_import">导入</string>
    <string name="cht_import">導入</string>
    <string name="en_import">Import</string>
    <string name="input">输入</string>
    <string name="cht_input">輸入</string>
    <string name="en_input">Input</string>
    <string name="export">导出</string>
    <string name="cht_export">導出</string>
    <string name="en_export">Export</string>
    <string name="output">输出</string>
    <string name="cht_output">輸出</string>
    <string name="en_output">Output</string>
    <string name="sys_app">系统应用程序</string>
    <string name="cht_sys_app">系統應用程式</string>
    <string name="en_sys_app">System Application(s)</string>
    <string name="user_app">用户应用程序</string>
    <string name="cht_user_app">用戶應用程式</string>
    <string name="en_user_app">User Application(s)</string>
    <string name="function_not_implemented">功能待实现</string>
    <string name="cht_function_not_implemented">功能待實現</string>
    <string name="en_function_not_implemented">Function Not Implemented</string>
    <string name="to_be_supplemented">待补充</string>
    <string name="cht_to_be_supplemented">待補充</string>
    <string name="en_to_be_supplemented">To Be Supplemented</string>
    <string name="please_look_forward_to_it">敬请期待</string>
    <string name="cht_please_look_forward_to_it">敬請期待</string>
    <string name="en_please_look_forward_to_it">Please look forward to it</string>
    <string name="apply_to_current">应用于当前</string>
    <string name="cht_apply_to_current">應用於當前</string>
    <string name="en_apply_to_current">Apply to Current</string>
    <string name="apply_to_all">应用于所有</string>
    <string name="cht_apply_to_all">應用於所有</string>
    <string name="en_apply_to_all">Apply to All</string>
    <string name="not_limited">不限</string>
    <string name="cht_not_limited">不限</string>
    <string name="en_not_limited">Not Limited</string>
    <string name="match_mode">匹配模式</string>
    <string name="cht_match_mode">匹配模式</string>
    <string name="en_match_mode">Match Mode</string>
    <string name="white_list_mode">白名单模式</string>
    <string name="cht_white_list_mode">白名單模式</string>
    <string name="en_white_list_mode">White List Mode</string>
    <string name="config_whilte_list">配置白名单</string>
    <string name="cht_config_whilte_list">配置白名單</string>
    <string name="en_config_whilte_list">Configure Whilte List</string>
    <string name="black_list_mode">黑名单模式</string>
    <string name="cht_black_list_mode">黑名單模式</string>
    <string name="en_black_list_mode">Black List Mode</string>
    <string name="config_black_list">配置黑名单</string>
    <string name="cht_config_black_list">配置黑名單</string>
    <string name="en_config_black_list">Configure Black List</string>
    <string name="collision_handling">冲突处理</string>
    <string name="cht_collision_handling">沖突處理</string>
    <string name="en_collision_handling">Collision Handling</string>
    <string name="white_list_first">白名单优先</string>
    <string name="cht_white_list_first">白名單優先</string>
    <string name="en_white_list_first">White List First</string>
    <string name="black_list_first">黑名单优先</string>
    <string name="cht_black_list_first">黑名單優先</string>
    <string name="en_black_list_first">Black List First</string>
    <string name="config_details">配置详情</string>
    <string name="cht_config_details">配置詳情</string>
    <string name="en_config_details">Configuration Details</string>
    <string name="config_successful">配置成功</string>
    <string name="cht_config_successful">配置成功</string>
    <string name="en_config_successful">Configuration Successful</string>
    <string name="match_keywords">匹配关键字</string>
    <string name="cht_match_keywords">匹配關鍵字</string>
    <string name="en_match_keywords">Match Keywords</string>
    <string name="db_error">数据库操作错误</string>
    <string name="cht_db_error">數據庫操作錯誤</string>
    <string name="en_db_error">Database Error</string>
    <string name="data_init_error">数据初始化失败</string>
    <string name="cht_data_init_error">數據初始化失敗</string>
    <string name="category">种类</string>
    <string name="edit_category">编辑种类</string>
    <string name="brief">摘要</string>
    <string name="details">详情</string>
</resources>