<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:background="@android:color/transparent" >
	
		<LinearLayout
		    android:id="@+id/llayout_details_page"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
		    <TextView
		        android:id="@+id/txv_name"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/name"
		        android:textAppearance="@style/DefaultTextStyle" />
		    
		    <EditText
		        android:id="@+id/etx_name"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:gravity="top"
		        android:inputType="textMultiLine"
		        android:autoLink="none"
			    android:hint="@string/empty_string"
			    android:textAppearance="@style/DefaultTextStyle"
			    android:textColor="#ffcacaca"
		        android:minLines="1"
		        android:scrollbars="vertical" />
		    
		    <ImageView
		        android:id="@+id/imgv_delimeter_name"
		        android:contentDescription="@string/empty_string"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:background="#88b27e50" >
		    </ImageView>
		    
		    <TextView
		        android:id="@+id/txv_category"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:text="@string/category"
		        android:textAppearance="@style/DefaultTextStyle" />
		
		    <Spinner
		        android:id="@+id/spn_category"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:spinnerMode="dialog" />
		    
		    <ImageView
		        android:id="@+id/imgv_delimeter_category"
		        android:contentDescription="@string/empty_string"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:background="#88b27e50" >
		    </ImageView>
		    
		    <TextView
		        android:id="@+id/txv_brief"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:text="@string/brief"
		        android:textAppearance="@style/DefaultTextStyle" />
		    
		    <EditText
		        android:id="@+id/etx_brief"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:gravity="top"
		        android:inputType="textMultiLine"
		        android:autoLink="none"
			    android:hint="@string/empty_string"
			    android:textAppearance="@style/DefaultTextStyle"
			    android:textColor="#ffcacaca"
		        android:minLines="1"
		        android:scrollbars="vertical" />
		    
		    <ImageView
		        android:id="@+id/imgv_delimeter_brief"
		        android:contentDescription="@string/empty_string"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:background="#88b27e50" >
		    </ImageView>
		    
		    <TextView
		        android:id="@+id/txv_details"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:text="@string/details"
		        android:textAppearance="@style/DefaultTextStyle" />
		    
		    <EditText
		        android:id="@+id/etx_details"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:gravity="top"
		        android:inputType="textMultiLine"
		        android:autoLink="none"
			    android:hint="@string/empty_string"
			    android:textAppearance="@style/DefaultTextStyle"
			    android:textColor="#ffcacaca"
		        android:minLines="1"
		        android:scrollbars="vertical" />
		    
		    <ImageView
		        android:id="@+id/imgv_delimeter_details"
		        android:contentDescription="@string/empty_string"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:background="#88b27e50" >
		    </ImageView>
		    
		    <TextView
		        android:id="@+id/txv_remarks"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:text="@string/remarks"
		        android:textAppearance="@style/DefaultTextStyle" />
		    
		    <EditText
		        android:id="@+id/etx_remarks"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vertical_margin"
		        android:gravity="top"
		        android:inputType="textMultiLine"
		        android:autoLink="none"
			    android:hint="@string/empty_string"
			    android:textAppearance="@style/DefaultTextStyle"
			    android:textColor="#ffcacaca"
		        android:minLines="1"
		        android:scrollbars="vertical" />
    
    	</LinearLayout>
    
	</ScrollView>

</LinearLayout>
